--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@gngt/ionic",
-  "version": "7.0.0-alpha.5-df60176",
+  "version": "7.0.0-alpha.5-356ec9e",
   "description": "",
   "main": "./bundles/ionic.umd.js",
   "module": "./esm5/ionic.es5.js",
@@ -35,7 +35,7 @@
     ]
   },
   "sideEffects": false,
-  "releaseGitCommitSha": "df60176f0a3c33cf0741da474d0367cfdb68455c",
-  "releaseGitBranch": "master",
-  "releaseGitUser": "trik <marco.marche@gnucoop.com>"
+  "releaseGitCommitSha": "356ec9e49fc0323f96038d6147f4d5080b27e861",
+  "releaseGitBranch": "",
+  "releaseGitUser": " <>"
 }
