--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@gngt/ionic",
-  "version": "7.0.0-beta.1-2307d67",
+  "version": "7.0.0-beta.4-ed60d27",
   "description": "",
   "main": "./bundles/ionic.umd.js",
   "module": "./esm5/ionic.es5.js",
@@ -21,6 +21,7 @@
     "@angular/core": ">=7.0.0",
     "@angular/common": ">=7.0.0",
     "@angular/router": ">=7.0.0",
+    "@gic/angular": "0.0.0-GIC",
     "@ionic/angular": ">=4.0.0"
   },
   "dependencies": {
@@ -35,7 +36,7 @@
     ]
   },
   "sideEffects": false,
-  "releaseGitCommitSha": "2307d6723898807f528c276defd179fbd8c01042",
+  "releaseGitCommitSha": "ed60d27cc200881723a0bba2034a10181e025e52",
   "releaseGitBranch": "",
   "releaseGitUser": " <>"
 }
